# jellyfin-vue

./: .dockerignore  .eslintignore  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .npmrc  .postcssrc  .prettierignore  .prettierrc  .stylelintrc.json  .yarnclean  .yarnrc  CONTRIBUTING.md  Dockerfile  Dockerfile.ci  Dockerfile.dev  Dockerfile.ssr  Dockerfile.static  Dockerfile.static.ci  README.md  auth-fix.d.ts  babel.config.js  browserstack.json  codecov.yml  components.d.ts  config.js  config.json  jest.config.js  jest.setup.ts  nginx.conf  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  stylelint.config.js  tsconfig.json  vetur.config.js  vite.config.ts  (+1 more)
.ci/: azure-pipelines-build.yml  azure-pipelines-lint.yml  azure-pipelines-test.yml  azure-pipelines.yml
.devcontainer/: Dockerfile  devcontainer.json  postunpack.sh
.docker/: mime.types  nginx.conf  nuxt.config.js  package-lock.json  package.json  setup.sh
.github/: FUNDING.yml  dependabot.yml  labeler.yml  renovate.json  stale.yml
.husky/: commit-msg  pre-commit
.run/: build.run.xml  dev.run.xml  lint.run.xml  test.run.xml
api/: api.ts  base.ts  configuration.ts  index.ts
assets/: global.scss  transitions.scss  variables.scss
client/: nuxt.config.ts  server.crt  server.key  tsconfig.json
components/: AddServerForm.vue  AudioControls.vue  AudioPlayer.vue  Backdrop.vue  BlurhashCanvas.vue  Card.vue  (+50 more)
packaging/tauri/: Cargo.toml  README.md  apt_packages  package.json  tauri.conf.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
(+1741 files in other folders)
