[package]
name = "jellyfin-vue"
version = "0.1.0"
description = "Jellyfin Tauri App"
authors = [ "jellyfin" ]
license = "GPL-3.0"
repository = "https://github.com/jellyfin/jellyfin-vue"
default-run = "jellyfin-vue"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11", features = [ "all-api" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "jellyfin-vue"
path = "src/main.rs"
